// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaUpload 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <a
      download=""
    >
      sulu_media.download_media
    </a>
    <button
      type="button"
    >
      sulu_media.delete_media
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload with a different image size 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <a
      download=""
    >
      sulu_media.download_media
    </a>
    <button
      type="button"
    >
      sulu_media.delete_media
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload with an empty icon if no image is passed 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer default"
  >
    <div
      class="emptyIndicator"
    >
      <span
        aria-label="su-image"
        class="su-image"
      />
    </div>
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <a
      download=""
    >
      sulu_media.download_media
    </a>
    <button
      type="button"
    >
      sulu_media.delete_media
    </button>
  </div>,
]
`;

exports[`Render a SingleMediaUpload with the round skin 1`] = `
Array [
  <div
    aria-disabled="false"
    class="mediaContainer round"
  >
    <img
      class="thumbnail"
      src="sulu-400x400"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <div
            class="uploadInfoText"
          >
            Upload media
          </div>
        </div>
      </div>
    </div>
    <input
      autocomplete="off"
      style="display:none"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  >
    <a
      download=""
    >
      sulu_media.download_media
    </a>
    <button
      type="button"
    >
      sulu_media.delete_media
    </button>
  </div>,
]
`;
